src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allowsmarketingevents__c</fullName>
        <label>Allows marketing events?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Number__c</fullName>
        <label>Alternate Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AverageSurveyScore__c</fullName>
        <label>Average Survey Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bestdaystimestovisit__c</fullName>
        <label>Best days &amp; times to visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Head Quarters</fullName>
                </value>
                <value>
                    <fullName>Regional Location</fullName>
                </value>
                <value>
                    <fullName>Field Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Person_Employer__c</fullName>
        <label>Contact Person (Employer)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractComments__c</fullName>
        <label>Contract Comment(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Verbal Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomBillCodeProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomBillCodeProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Index__c</fullName>
        <label>Customer Satisfaction Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Extremely Satisfied - Customer</fullName>
                </value>
                <value>
                    <fullName>B - Satisfied</fullName>
                </value>
                <value>
                    <fullName>C - Neutral</fullName>
                </value>
                <value>
                    <fullName>D - Dissatisfied - At risk of losing business</fullName>
                </value>
                <value>
                    <fullName>F - Unsatisfactory - Losing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax_Employer__c</fullName>
        <label>Fax (Employer)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ifyeswhattype__c</fullName>
        <label>If yes, what type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Guidelines__c</fullName>
        <description>Instructions for Customer Special Handling and Guidelines</description>
        <inlineHelpText>Instructions for Customer Special Handling and Guidelines</inlineHelpText>
        <label>Internal Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Invoice_Date__c</fullName>
        <label>Most Recent Invoice Date</label>
        <summarizedField>Opportunity.B_Note_Approval_Date_Time__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Closed_Reports__c</fullName>
        <label>No. of Closed Reports</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Open_Reports__c</fullName>
        <label>No. of Open Reports</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofSurveys__c</fullName>
        <label># of Surveys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <inlineHelpText>Complete this field with &quot;Other&quot; is selected for Type</inlineHelpText>
        <label>&quot;Other&quot; Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Account Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Employer__c</fullName>
        <label>Phone (Employer)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physician_Address__c</fullName>
        <label>Physician Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physician_Fax__c</fullName>
        <label>Physician Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physician_Phone__c</fullName>
        <label>Physician Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Professional_Rate__c</fullName>
        <label>Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QB_Error__c</fullName>
        <description>Contains the error returned by Quickbooks if sync failed.</description>
        <label>QB Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QB_Id__c</fullName>
        <description>Contains Id for related Customer record in QuickBooks</description>
        <externalId>true</externalId>
        <label>QB Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsWithNonProfessional_Hours__c</fullName>
        <label># of Reports With Non-Professional Hours</label>
        <summaryFilterItems>
            <field>Opportunity.B_Non_Professional_Billings_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReportsWithProfessional_Hours__c</fullName>
        <label># of Reports With Professional Hours</label>
        <summaryFilterItems>
            <field>Opportunity.B_Professional_Billings_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rush_Mileage_Rate__c</fullName>
        <label>Special Services Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Professional_Rate__c</fullName>
        <label>Special Services Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Travel_Wait_Rate__c</fullName>
        <label>Special Services Travel/Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Instuctions__c</fullName>
        <label>Special Instuctions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toll_Free__c</fullName>
        <description>Toll Free</description>
        <label>Toll Free</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TotalBalance__c</fullName>
        <label>Total Balance</label>
        <summarizedField>Opportunity.Balance__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalCPs__c</fullName>
        <label>Total # CPs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Reports__c</fullName>
        <formula>No_of_Closed_Reports__c + No_of_Open_Reports__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Wait_Rate__c</fullName>
        <label>Travel/Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treating_Physician__c</fullName>
        <label>Treating Physician</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseCustomBillingCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseCustomBillingCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_of_Closed_Reports__c</fullName>
        <label>Value of Closed Reports</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Value_of_Open_Reports__c</fullName>
        <label>Value of Open Reports</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VerifiedAccountInfoComments__c</fullName>
        <inlineHelpText>Document verification of info on this Account. Provide date and initials.</inlineHelpText>
        <label>Verified Account Info Comment(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WISAFI_AccountingVersion__c</fullName>
        <label>Accounting Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__Billing_Address_Block__c</fullName>
        <label>Billing Address Block</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WISAFI__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WISAFI__External_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Account ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WISAFI__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WISAFI__Payment_Terms__c</fullName>
        <label>Payment Terms (old)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__Shipping_Address_Block__c</fullName>
        <label>Shipping Address Block</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WISAFI__Sync_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WISAFI__Terms__c</fullName>
        <label>Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Account_w_Rates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Arizona__pc</columns>
        <columns>California__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer_Insurance</value>
        </filters>
        <label>Account w/Rates</label>
        <sharedTo>
            <role>AdminStaffMedicalServices</role>
            <role>CstmrRelationsCordMedicalVocServ</role>
            <role>CustRelationsCoordCaseMgmtServices</role>
            <role>GMEducationalVocationalServices</role>
            <role>GMMedicalServices</role>
            <role>ManagerCustomerRelations</role>
            <role>ManagerHumanResources</role>
            <role>President</role>
            <role>VicePresidentFinanceCorporateOfficer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_by_Rep</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Accounts by Rep</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>CustomerInsurance</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer_Insurance</value>
        </filters>
        <label>Customer - Insurance</label>
    </listViews>
    <listViews>
        <fullName>Customer_Company_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer_Company</value>
        </filters>
        <label>Customer - Company</label>
    </listViews>
    <listViews>
        <fullName>Employee_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Individual</value>
        </filters>
        <label>Employee Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_CSL</fullName>
        <active>true</active>
        <label>Customer - CSL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Company</fullName>
        <active>true</active>
        <description>This record type is used to create a Company for employees we help</description>
        <label>Customer - Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Insurance</fullName>
        <active>true</active>
        <description>This record type is used to create an Insurance Company (Customer)</description>
        <label>Customer - Insurance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>